--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
-        # env: # default use ${{ secrets.GITHUB_TOKEN }}, you can change to your personal access token
-        #   GITHUB_TOKEN: ${{ secrets.README }}
+        env: # default use ${{ secrets.GITHUB_TOKEN }}, you can change to your personal access token
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
           # UTC_OFFSET: 8
